# agent

./: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  .mcp.json  .prettierignore  AGENT_REGISTRY_SUMMARY.md  AUTH_SETUP.md  CLAUDE.md  CLI_SETUP.md  CODEX_FEATURES.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_REPORT.md  CONDUCTOR_PROMPT.md  CONTRIBUTING.md  DISTRIBUTED_RATE_LIMITING.md  Dockerfile  FFI_IMPLEMENTATION_PLAN.md  FIXES_COMPLETED.md  GHOSTTY_INTEGRATION_PROMPT.md  GHOSTTY_INTEGRATION_STATUS.md  GHOSTTY_NIX_INTEGRATION.md  ISSUE_DEPENDENCIES_API.md  ISSUE_REFERENCES.md  ISSUE_REFERENCES_ARCHITECTURE.md  ISSUE_REFERENCES_DEMO.md  LICENSE  LICENSE.md  LSP_VERIFICATION_REPORT.md  PHASE4_COMPLETE.md  PTY_IMPLEMENTATION_SUMMARY.md  Package.resolved  Package.swift  README.md  SECURITY_FIX_VERIFICATION.md  SECURITY_TESTS.md  SECURITY_TEST_QUICKSTART.md  (+65 more)
.claude/: handoff-jj-native.md
.github/: CICD_GUIDE.md  README.md
.prompt/: add-comprehensive-integration-tests.md  add-git-command-fuzz-tests.md  add-json-parsing-fuzz-tests.md  add-mock-database-implementations.md  consider-arena-allocators.md  (+15 more)
agent/: agent.py  (+8 more)
native/: .gitignore  Cargo.toml  app.ts  index.d.ts  index.js  package.json  test.ts
native/scripts/: download-webui.ts
native/src/: ffi.ts  lib.rs  snapshot.test.ts  snapshot.ts  webui.ts
runner/: Dockerfile  README.md  agent.py  logger.py  main.py  pyproject.toml  requirements.txt  streaming.py  test_logger.py  test_streaming.py  workflow.py
runner/k8s/: pod-template.yaml  secrets.yaml
runner/src/: __init__.py  main.py  streaming.py  workflow.py
runner/src/tools/: grep.py  list_files.py  read_file.py  shell.py  write_file.py
runner/tests/: README.md  test_tools.py
runner/tools/: README.md  __init__.py  grep.py  write_file.py
server/jj-ffi/: Cargo.toml  PROJECT.md  SUMMARY.md  jj_ffi.h
server/jj-ffi/src/: lib.rs
(+2216 files in other folders)
