[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=0.1.9",
    "strands-agents-tools>=0.2.17",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.0",
    "gitpython>=3.1.45",
    "pydantic-ai>=0.0.20",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
]
