[package]
name = "jj-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs for Node.js/Bun bindings
napi = { version = "2", features = ["napi9", "async", "serde-json"] }
napi-derive = "2"

# jj-lib core library
jj-lib = { git = "https://github.com/jj-vcs/jj", features = ["git"] }

# Supporting dependencies
tokio = { version = "1", features = ["rt-multi-thread"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pollster = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
