[project]
name = "plue-runner"
version = "0.1.0"
description = "Agent and workflow execution runner for Plue"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
