[package]
name = "jj-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# jj-lib core library - pinned to v0.36.0 for API stability
jj-lib = { git = "https://github.com/jj-vcs/jj", tag = "v0.36.0", features = ["git"] }

# Supporting dependencies
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
lto = true
strip = true
opt-level = 3
